<resources>
    <string name="app_name">Teacher</string>
    <string name="app_description">Face recognition Attendance Management app</string>

    <!-- Strings related to login -->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="sign_in_or_register">Sign in or register</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="uid">UID</string>
    <string name="dept_id">Department ID</string>
    <string name="dept">Department</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="post_registration">Successfully registered. Please log in</string>
    <string name="registration_failed">Failed to register</string>
    <string name="login_error">Error in login</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="chats">Chats</string>
    <string name="courses">Courses</string>
    <string name="invalid">Invalid input</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="search_courses">Search courses</string>
    <string name="no_results">No results</string>
    <string name="no_courses">No courses found</string>
    <string name="welcome">Welcome</string>
    <string name="back_press_prompt">Press back again to exit</string>

    <string name="replay_intro">Replay Intro</string>
    <string name="about">About</string>
    <string name="logout">Log out</string>
    <string name="teacher">Teacher</string>

    <string name="course_name">Course Name</string>
    <string name="course_desc">Course description</string>
    <string name="academic_yr">Academic year</string>
    <string name="year">Year</string>
    <string name="departments">Department</string>
    <string name="create_course">Create course</string>

    <string name="enrolled_students">Enrolled Students</string>
    <string name="enrollment_on_text">Enrollment is ongoing. You can create lectures only when enrollment is stopped. Press the button below to stop enrollment.</string>
    <string name="enrollment_off_text">Enrollment is stopped. Students can enroll only when enrollment is ongoing. Press the button below to start enrollment.</string>
    <string name="stop_enrollment">Stop enrollment</string>
    <string name="start_enrollment">Start enrollment</string>
    <string name="lectures">Lectures</string>
    <string name="no_lectures">No lectures created</string>
    <string name="confirm_stop_enrollment">Confirm stop enrollment?</string>
    <string name="confirm_start_enrollment">Confirm start enrollment?</string>
    <string name="action_can_be_undone">This action can be undone later</string>
    <string name="cancel">Cancel</string>
    <string name="no_students">No students</string>
    <string name="students">Students</string>
    <string name="course_details">Course details</string>
    <string name="select_start_time">start</string>
    <string name="create_lecture">Create Lecture</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="generate_report">Generate report</string>
    <string name="please_wait">Please wait…</string>
    <string name="classroom">Classroom</string>

    <string name="backend_channel_name">Server alerts</string>
    <string name="backend_channel_description">Notifications and alerts sent by backend server</string>
    <string name="backend_channel_id">backend_channel_id</string>
    <string name="lecture_details_empty_text">Enrolled students will show here\nafter taking attendance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="results">Results</string>
    <string name="circular">Circular</string>

</resources>
